--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <!-- <base href="/"> -->
   <base href="https://m-imrannawaz.github.io/welpco_web/">
 
   <meta charset="UTF-8">
@@ -31,6 +32,8 @@
 
   <title>welpco_provider_web</title>
   <link rel="manifest" href="manifest.json">
+
+
   
 </head>
 <body>
